# AIdocumentIntelligence

./: README.md  app.py  chat_handler.py  document_processor.py  pyproject.toml  readme.txt  requirements.txt
