[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "openai>=1.86.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "streamlit>=1.45.1",
]